# libInstaxClient

./: CMakeLists.txt  README.md
research/emulator/: ClientNotConnectedException.java  InstaxClientEmulator.java  InstaxFrame.java  InstaxFrameTest.java  InstaxPrinterEmulator.java  InstaxProtocolConsts.java  InvalidFrameException.java  test.java
src/: CMakeLists.txt  InstaxFrame.cpp  InstaxFrame.hpp  InstaxPrinterConnection.cpp  InstaxPrinterConnection.hpp  InstaxPrinterParameters.hpp  InstaxProtocol.hpp  InstaxStatus.hpp  testInstaxPrinterConnection.cpp
test/: CMakeLists.txt  GTest_Install_Test.cpp  InstaxFrameTest.cpp
